# scm

./: .gitignore  better_procedure.txt  procedure.txt
document/: abstract.tex  conclusion.tex  introduction.tex  master_doc.tex  methods.tex  references.bib  results.tex
document/graphics/: balanced_correlation.eps  bidirectional_correlation.eps  compare_distance.eps  compare_time.eps  hist_op_ba.eps  hist_op_bi.eps  hist_tran_op_ba.eps  hist_tran_op_bi.eps  qq_op_ba.eps  qq_op_bi.eps  qq_tran_op_ba.eps  qq_tran_op_bi.eps
important_files/: output.lua  top_secret.txt
program_code/: mandatory2_matlab_script.m
program_code/mandatory2/: CMakeLists.txt
program_code/scm-mandatory2/: CMakeLists.txt  main.cpp
statistics/: data_processing.R  explorative.R  functions.R  rrtbalancedbidirectional.txt  rrtbalancedbidirectional_optimal_extend.txt  rrtbidirectional.txt  rrtbidirectional_optimal_extend.txt  rrtconnect.txt  rrtconnect_optimal_extend.txt
